--- a/style.css
+++ b/style.css
@@ -1,1 +1,35 @@
 @charset "utf-8";
+
+
+* {
+    margin: 0px;
+    padding: 0px;
+    font-size: 1em;
+}
+:root{
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
+
+header{
+    background-color: black;
+    color: white;
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+header > h1 {
+    font-size: 10vw;
+    padding-top: 50px;
+    font-variant: small-caps;
+    
+}
+header > p {
+    padding-bottom: 50px;
+    
+}
+
+main section p {
+    margin-bottom: 2em;
+    font-family: var(--fonte2);
+}
