--- a/style.css
+++ b/style.css
@@ -26,10 +26,38 @@ header > h1 {
 }
 header > p {
     padding-bottom: 50px;
-    
+
 }
 
 main section p {
     margin-bottom: 2em;
     font-family: var(--fonte2);
+    font-size: 3.5vw;
+    padding-top: 10vw;
+    padding-bottom: 10vw;
+    padding-left: 2vw;
+}
+.imagem{
+    color: white;
+    
+
+}
+#foto1 {
+    background-image: url('imagens/background001.jpg');
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+#foto2 {
+    background-image: url('imagens/background002.jpg');
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+footer {
+    background-color: black;
+    color: white;
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
 }
