--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ header{
     background-color: black;
     color: white;
     text-align: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family:var(--fonte1);
 }
 header > h1 {
     font-size: 10vw;
@@ -33,23 +33,34 @@ main section p {
     margin-bottom: 2em;
     font-family: var(--fonte2);
     font-size: 3.5vw;
-    padding-top: 10vw;
-    padding-bottom: 10vw;
+    
     padding-left: 2vw;
 }
-.imagem{
-    color: white;
-    
 
+section.imagem > p{
+    margin: 5vw;
+    height: 40vw;
+    width: 45vw;
+    padding-top: 5vw;
+    background-color: rgba(0, 0, 0, 0.316);
+    color: white;
+    position: relative;
+   
 }
 #foto1 {
     background-image: url('imagens/background001.jpg');
+    padding-top: 7vw;
+    padding-bottom: 7vw;
+    background-position: right center;
     background-size: cover;
     background-attachment: fixed;
 }
 
 #foto2 {
     background-image: url('imagens/background002.jpg');
+    padding-top: 7vw;
+    padding-bottom: 7vw;
+    background-position: right center;
     background-size: cover;
     background-attachment: fixed;
 }
