--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ header{
 header > h1 {
     font-size: 10vw;
     padding-top: 50px;
-    font-variant: small-caps;
+    font-variant: small-caps;/*deixa todas as letras maiusculas oprem com as primeiras maiores*/
     
 }
 header > p {
@@ -29,11 +29,15 @@ header > p {
 
 }
 
+section{
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+}
+
 main section p {
     margin-bottom: 2em;
     font-family: var(--fonte2);
     font-size: 3.5vw;
-    
     padding-left: 2vw;
 }
 
@@ -41,7 +45,6 @@ section.imagem > p{
     margin: 5vw;
     height: 40vw;
     width: 45vw;
-    padding-top: 5vw;
     background-color: rgba(0, 0, 0, 0.316);
     color: white;
     position: relative;
@@ -49,8 +52,6 @@ section.imagem > p{
 }
 #foto1 {
     background-image: url('imagens/background001.jpg');
-    padding-top: 7vw;
-    padding-bottom: 7vw;
     background-position: right center;
     background-size: cover;
     background-attachment: fixed;
@@ -58,8 +59,6 @@ section.imagem > p{
 
 #foto2 {
     background-image: url('imagens/background002.jpg');
-    padding-top: 7vw;
-    padding-bottom: 7vw;
     background-position: right center;
     background-size: cover;
     background-attachment: fixed;
