--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 @charset "utf-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
 
 * {
     margin: 0px;
@@ -16,16 +19,17 @@ header{
     background-color: black;
     color: white;
     text-align: center;
-    font-family:var(--fonte1);
 }
 header > h1 {
     font-size: 10vw;
     padding-top: 50px;
     font-variant: small-caps;/*deixa todas as letras maiusculas oprem com as primeiras maiores*/
+    font-family:var(--fonte2);
     
 }
 header > p {
     padding-bottom: 50px;
+    font-family:var(--fonte1);
 
 }
 
@@ -36,8 +40,8 @@ section{
 
 main section p {
     margin-bottom: 2em;
-    font-family: var(--fonte2);
-    font-size: 3.5vw;
+    font-family: var(--fonte3);
+    font-size: 3vw;
     padding-left: 2vw;
 }
 
